--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <meta charset=utf-8>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Schiibe Chlöpfer</title>
+        <link rel="icon" href="img/SchiibeChloepfer_Logo_favicon.svg" type="image/svg+xml">
+        <link rel="icon" href="img/SchiibeChloepfer_Logo_raw_bt_Logo.ico" type="image/x-icon">
         <script src="js/loadConent.js"></script>
         <script src="js/sendEmail.js"></script>
         <link rel="stylesheet" href="css/styles.css">
