news update and cleanup

--- a/html/news.html
+++ b/html/news.html
@@ -14,29 +14,26 @@
                             <td>01.10.2023</td>
                             <td>Offizielle Gründung des Vereins Schiibe Chlöpfer Züri Oberland</td>
                         </tr>
+                        
                         <tr>
-                            <td>12.09.2023</td>
-                            <td>Erste Iteration der Webseite und Erstellung der Vereinspräsentation</td>
-                        </tr>
-                        <tr>
-                            <td>09.09.202</td>
+                            <td>09.09.2023</td>
                             <td>Erhalt der Unterlagenpakets des Verbands</td>
                         </tr>
                         <tr>
                             <td>08.09.2023</td>
-                            <td>Erster Entwurf der Webseite und Erstellung des Instagram Profils</td>
+                            <td>Erstellung des Instagram Profils</td>
                         </tr>
                         <tr>
                             <td>08.09.2023</td>
-                            <td>Erstes Telefonat mit dem Leiter Ressort Infrastruktur</td>
+                            <td>Erstes Telefonat mit dem Leiter Ressort Infrastruktur des Projekt PARKED!</td>
                         </tr>
                         <tr>
                             <td>06.09.2023</td>
-                            <td>PARKED! Kontaktaufnahme</td>
+                            <td>Kontaktaufnahme mit Projekt PARKED!</td>
                         </tr>
                         <tr>
                             <td>03.09.2023</td>
-                            <td>Die Gründungsmitglieder beginnen mit der Erarbeitung der Unterlagen für die Gründung des Vereins „Schiibe Chlöpfer“</td>
+                            <td>Beschluss zur Gründung des Vereins „Schiibe Chlöpfer Züri Oberland“</td>
                         </tr>
                     </table>
                 </div>
