fixed join form

--- a/html/join.html
+++ b/html/join.html
@@ -86,7 +86,7 @@
                 <input type="date" class="joinFormInput" id="joinFormBirthday" name="joinFormBirthday" placeholder="01.10.2023" required>
 
                 <label for="joinFromMessage">Hast du noch Fragen?</label>
-                <input type="text" class="joinFormInput" id="joinFromMessage" name="joinFromMessage" placeholder="Wänn chlöpfemer di nächsti schiibe?">
+                <input type="text" class="joinFormInput" id="joinFormMessage" name="joinFromMessage" placeholder="Wänn chlöpfemer di nächsti schiibe?">
 
                 <div class="labelCheckboxCombo">
                     <input type="radio" class="joinFormInput" id="joinFormActive" name="joinFormAP" onchange="changeVisibilityOfPatronContribution()" required>
