add sitemap, rename kontakt to contact

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <li><a onclick="load_content('join')">Anmeldung</a></li>
                 <li><a onclick="load_content('course')">Kurs</a></li>
                 <li><a onclick="load_content('news')">News</a></li>
-                <li><a onclick="load_content('kontakt')">Kontakt</a></li>
+                <li><a onclick="load_content('contact')">Kontakt</a></li>
             </ul>
         </header>
         <main id="content">
