Add meta description, correct spelling

--- a/html/join.html
+++ b/html/join.html
@@ -22,7 +22,7 @@
                     Als Junior (unter 16 Jahre) geniesst du die selben Vorteile, wie ein normales Aktivmitglied, jedoch ohne Stimmrecht.
                 </p>
                 <p>
-                    Als Passivmitglied kriegst du ebenfalls ein Stimmrecht bei entscheidungen, musst jedoch auf die restlichen Vorteile verzichten.
+                    Als Passivmitglied kriegst du ebenfalls ein Stimmrecht bei Entscheidungen, musst jedoch auf die restlichen Vorteile verzichten.
                 </p>
                 <table id="priceTable" class="contentTable">
                     <tr><th colspan="2"><h2>Preis / Kalenderjahr</h2></th></tr>
