--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset=utf-8>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="description" content="Dein lokaler Disc Golf Verein im Zürich Oberland. Werde jetzt Mitglied!" />
         <title>Schiibe Chlöpfer</title>
         <link id="svgFavicon" rel="icon" href="img/SchiibeChloepfer_Logo_raw_bt_Logo.svg" type="image/svg+xml">
         <link id="icoFavicon" rel="icon" href="img/SchiibeChloepfer_Logo_raw_bt_Logo.ico" type="image/x-icon">
