--- a/html/home.html
+++ b/html/home.html
@@ -6,7 +6,7 @@
                     Schiibe Chlöpfer Züri Oberland
                 </h1>
                 <p class="foregroundDescription">
-                    Dein neuer Disc Golf Verein aus dem Züri Oberland, für das Züri Oberland.
+                    Dein neuer Disc Golf Verein aus dem Zürcher Oberland, für das Zürcher Oberland.
                 </p>
             </div>
             <div class="foregroundButtonArea">
